@@ -7,6 +7,7 @@
   * Finished moving imageIDI.py over to using the lsl.imaging modules
   * Changed the default FFT length in correlateTBN.py to 16 channels
   * Fixed a bug in lsl.common.sdf/sdfADP that caused parseSDF() to crash on SDFs generated by MCS when beam delays/gains were specified
+  * Updated lsl.common.sdfADP to allow two beams at LWA-SV
 
 1.2.0
   * Added a new lsl.common.adp module to help describe ADP
